--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
+  padding: 40px 20px;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(0, 0, 0, 1);
