--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,23 @@
   padding: 40px 20px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: rgba(0, 0, 0, 1);
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.2); /* Adjust the opacity as needed */
+  pointer-events: none; /* Allow clicks to pass through */
+}
+
+*:not(.overlay) {
+  /* Your styles here */
+  z-index:1;
+}
 
 #story-list::-webkit-scrollbar {
   width: 3px;
