--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@
   width: 100%;
   height: 100%;
   content: '';
-  background-color: rgba(0, 0, 0, 0.4); /* Adjust the opacity as needed */
+  background-color: rgba(0, 0, 0, 0.2); /* Adjust the opacity as needed */
   pointer-events: none; /* Allow clicks to pass through */
 }
 
-/* *:not(.overlay) {
+body > *:not(.overlay) {
   z-index:1;
-} */
+}
 
 #story-list::-webkit-scrollbar {
   width: 3px;
