--- a/src/App.css
+++ b/src/App.css
@@ -3,29 +3,16 @@
 }
 
 
+
 .App {
   height: 100%;
   padding: 40px 20px;
-
   display: flex;
   align-items: center;
   justify-content: center;
+  background: black;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1); /* Adjust the opacity as needed */
-  pointer-events: none; /* Allow clicks to pass through */
-}
-
-body > *:not(.overlay) {
-  z-index:1;
-}
 
 .scroll-list:-webkit-scrollbar {
   width: 3px;
@@ -40,10 +27,5 @@ body > *:not(.overlay) {
   outline: 1px solid rgb(65, 65, 65);
 }
 
-#main {
-  background: #3C3B3F;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #322f1f, #3C3B3F);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #322f1f, #3C3B3F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-}
 
