--- a/src/components/AudioPlayer/custom.css
+++ b/src/components/AudioPlayer/custom.css
@@ -2,3 +2,23 @@
 .rhap_total-time {
     color: #C1C2C5;
 }
+
+.mantine-InputWrapper-label {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    color: #212529;
+    padding-left: 16px;
+    position: relative;
+    margin-bottom: 6px;
+}
+
+.mantine-InputWrapper-label::before {
+    width: 6px;
+    height: 20px;
+    content: '';
+    background: #6741D9;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+}
