--- a/src/override.css
+++ b/src/override.css
@@ -43,3 +43,24 @@
 .mantine-TextInput-error {
     bottom: -18px;
 }
+
+
+.mantine-InputWrapper-label {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    color: #212529;
+    padding-left: 16px;
+    position: relative;
+    margin-bottom: 6px;
+}
+
+.mantine-InputWrapper-label::before {
+    width: 6px;
+    height: 20px;
+    content: '';
+    background: #6741D9;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+}
