--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  min-height: 100%;
+}
+body {
+  height: 100vh;
+}
 
-html, body{min-height:100%;}
-body{height:100vh;}
 #title {
-    font-family: 'Beth Ellen', cursive;
+  font-family: "Beth Ellen", cursive;
 }
